--- a/index.html
+++ b/index.html
@@ -3,6 +3,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="google-site-verification" content="TDGnBI31_ul1VX82onM9naqZInznIB2mzZVILSWZRHY" />
+  <link rel="icon" type="image/png" href="/favicon.png">
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
+  <link rel="apple-touch-icon" href="/favicon.png">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta property="og:title" content="GridFill Game" />
+  <meta property="og:description" content="Check out this puzzle challenge!" />
+  <meta property="og:image" content="https://gridfill.link/preview.png" />
+  <meta property="og:url" content="https://gridfill.link" />
+  <meta name="twitter:title" content="GridFill — Puzzle Challenge">
+  <meta name="twitter:description" content="Try to solve this logic puzzle faster than your friends.">
+  <meta name="twitter:image" content="https://gridfill.link/preview.png">
+  <meta name="twitter:card" content="summary_large_image" />
   <title>GridFill Verification</title>
 </head>
 <body>
