--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="google-site-verification" content="TDGnBI31_ul1VX82onM9naqZInznIB2mzZVILSWZRHY" />
   <link rel="icon" type="image/png" href="/favicon.png">
-  <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <link rel="apple-touch-icon" href="/favicon.png">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta property="og:title" content="GridFill Game" />
@@ -17,34 +16,102 @@
   <meta name="twitter:image" content="https://gridfill.link/preview.png">
   <meta name="twitter:card" content="summary_large_image" />
   <title>Loading GridFill...</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Helvetica Neue', sans-serif;
+      background-color: #0a0a0a;
+      color: #f4f4f4;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      text-align: center;
+    }
+
+    h1 {
+      font-size: 2rem;
+      margin-bottom: 10px;
+      color: #00ffe1;
+    }
+
+    p {
+      font-size: 1rem;
+      margin-top: 5px;
+      opacity: 0.8;
+    }
+
+    a#fallback-link {
+      display: inline-block;
+      margin-top: 20px;
+      padding: 10px 20px;
+      background-color: #00ffe1;
+      color: #0a0a0a;
+      text-decoration: none;
+      border-radius: 6px;
+      font-weight: bold;
+      transition: background-color 0.2s ease;
+    }
+
+    a#fallback-link:hover {
+      background-color: #00cbbd;
+    }
+
+    .grid-icon {
+      width: 80px;
+      height: 80px;
+      margin-bottom: 20px;
+    }
+
+    .loading-animation {
+      margin-top: 20px;
+      display: flex;
+      gap: 6px;
+    }
+
+    .dot {
+      width: 10px;
+      height: 10px;
+      border-radius: 50%;
+      background: #00ffe1;
+      animation: blink 1s infinite alternate;
+    }
+
+    .dot:nth-child(2) { animation-delay: 0.2s; }
+    .dot:nth-child(3) { animation-delay: 0.4s; }
+
+    @keyframes blink {
+      0% { opacity: 1; transform: scale(1); }
+      100% { opacity: 0.3; transform: scale(0.7); }
+    }
+  </style>
 </head>
 <body>
-  <h1>Opening GridFill...</h1>
-  <p>If the app doesn't open, <a id="fallback-link" href="#">tap here to download GridFill</a>.</p>
+  <img src="/favicon.png" alt="GridFill icon" class="grid-icon" />
+  <h1>Launching GridFill...</h1>
+  <p>Loading your puzzle — launching the app...</p>
+  <div class="loading-animation">
+    <div class="dot"></div>
+    <div class="dot"></div>
+    <div class="dot"></div>
+  </div>
+  <a id="fallback-link" href="#">Tap here if nothing happens</a>
 
   <script>
-    const appStoreURL = "https://gridfill.link";
+    const appStoreURL = "https://gridfill.link"; // Replace w/ App Store URL once live
     const params = new URLSearchParams(window.location.search);
     const state = params.get("s");
 
-    // Default fallback link
     document.getElementById("fallback-link").href = appStoreURL;
 
     if (state) {
       const deepLink = `gridfill://board?s=${encodeURIComponent(state)}`;
-
-      // Try to open the app
       window.location.href = deepLink;
-
-      // Fallback after delay
-      setTimeout(() => {
-        window.location.href = appStoreURL;
-      }, 2000);
+      setTimeout(() => { window.location.href = appStoreURL; }, 2000);
     } else {
-      // No state param? Redirect to App Store after short delay
-      setTimeout(() => {
-        window.location.href = appStoreURL;
-      }, 1200);
+      setTimeout(() => { window.location.href = appStoreURL; }, 1200);
     }
   </script>
 </body>
