--- a/index.html
+++ b/index.html
@@ -17,102 +17,45 @@
   <meta name="twitter:card" content="summary_large_image" />
   <title>Loading GridFill...</title>
   <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: 'Helvetica Neue', sans-serif;
-      background-color: #0a0a0a;
-      color: #f4f4f4;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      text-align: center;
-    }
-
-    h1 {
-      font-size: 2rem;
-      margin-bottom: 10px;
-      color: #00ffe1;
-    }
-
-    p {
-      font-size: 1rem;
-      margin-top: 5px;
-      opacity: 0.8;
-    }
-
-    a#fallback-link {
-      display: inline-block;
-      margin-top: 20px;
-      padding: 10px 20px;
-      background-color: #00ffe1;
-      color: #0a0a0a;
-      text-decoration: none;
-      border-radius: 6px;
-      font-weight: bold;
-      transition: background-color 0.2s ease;
-    }
-
-    a#fallback-link:hover {
-      background-color: #00cbbd;
-    }
-
-    .grid-icon {
-      width: 80px;
-      height: 80px;
-      margin-bottom: 20px;
-    }
-
-    .loading-animation {
-      margin-top: 20px;
-      display: flex;
-      gap: 6px;
-    }
-
-    .dot {
-      width: 10px;
-      height: 10px;
-      border-radius: 50%;
-      background: #00ffe1;
-      animation: blink 1s infinite alternate;
-    }
-
-    .dot:nth-child(2) { animation-delay: 0.2s; }
-    .dot:nth-child(3) { animation-delay: 0.4s; }
-
-    @keyframes blink {
-      0% { opacity: 1; transform: scale(1); }
-      100% { opacity: 0.3; transform: scale(0.7); }
-    }
+    body{margin:0;padding:0;font-family:'Helvetica Neue',sans-serif;background:#0a0a0a;color:#f4f4f4;
+          display:flex;flex-direction:column;align-items:center;justify-content:center;height:100vh;text-align:center;}
+    h1{font-size:2rem;margin-bottom:10px;color:#00ffe1;}
+    p{font-size:1rem;margin-top:5px;opacity:.8;}
+    a#fallback-link{display:inline-block;margin-top:20px;padding:10px 20px;background:#00ffe1;color:#0a0a0a;
+                    text-decoration:none;border-radius:6px;font-weight:bold;transition:background .2s ease;}
+    a#fallback-link:hover{background:#00cbbd;}
+    .grid-icon{width:80px;height:80px;margin-bottom:20px;}
+    .loading-animation{margin-top:20px;display:flex;gap:6px;}
+    .dot{width:10px;height:10px;border-radius:50%;background:#00ffe1;animation:blink 1s infinite alternate;}
+    .dot:nth-child(2){animation-delay:.2s}.dot:nth-child(3){animation-delay:.4s}
+    @keyframes blink{0%{opacity:1;transform:scale(1)}100%{opacity:.3;transform:scale(.7)}}
   </style>
 </head>
 <body>
   <img src="/favicon.png" alt="GridFill icon" class="grid-icon" />
   <h1>Launching GridFill...</h1>
-  <p>Loading your puzzle — launching the app...</p>
-  <div class="loading-animation">
-    <div class="dot"></div>
-    <div class="dot"></div>
-    <div class="dot"></div>
-  </div>
+  <p>Loading your puzzle — launching the app…</p>
+  <div class="loading-animation"><div class="dot"></div><div class="dot"></div><div class="dot"></div></div>
   <a id="fallback-link" href="#">Tap here if nothing happens</a>
 
   <script>
-    const appStoreURL = "https://gridfill.link"; // Replace w/ App Store URL once live
-    const params = new URLSearchParams(window.location.search);
-    const state = params.get("s");
+    /* ——— configuration ——— */
+    const appStoreURL = "https://gridfill.link";        // replace once the App Store page is live
+    const deepScheme  = "gridfill://b/";                // matches in-app handler
 
+    /* ——— extract encoded puzzle from `/b/<state>` ——— */
+    const path    = window.location.pathname;           // e.g. "/b/VEYIAAjMhIXAATUE"
+    const encoded = path.startsWith("/b/") && path.length > 3
+                    ? path.slice(3)                     // drop the leading "/b/"
+                    : "";
+
+    /* ——— build redirect target ——— */
+    const deepLink = encoded ? (deepScheme + encodeURIComponent(encoded)) : appStoreURL;
     document.getElementById("fallback-link").href = appStoreURL;
 
-    if (state) {
-      const deepLink = `gridfill://board?s=${encodeURIComponent(state)}`;
-      window.location.href = deepLink;
-      setTimeout(() => { window.location.href = appStoreURL; }, 2000);
-    } else {
-      setTimeout(() => { window.location.href = appStoreURL; }, 1200);
-    }
+    /* ——— attempt deep link, fallback after delay ——— */
+    window.location.href = deepLink;
+    setTimeout(()=>{window.location.href = appStoreURL;}, 2000);
   </script>
 </body>
 </html>
