--- a/policy.html
+++ b/policy.html
@@ -40,7 +40,7 @@
 <body>
     <div class="container">
         <h1>Privacy Policy for GridFill</h1>
-        <p><strong>Effective Date:</strong> [Today's Date]</p>
+        <p><strong>Effective Date:</strong> April 28, 2025</p>
 
         <p>GridFill does not collect, store, or share any personal information from users.</p>
 
