--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <script>
     /* ——— configuration ——— */
-    const appStoreURL = "https://gridfill.link";        // replace once the App Store page is live
+    const appStoreURL = "https://gridfill.link/policy";        // replace once the App Store page is live
     const deepScheme  = "gridfill://b/";                // matches in-app handler
 
     /* ——— extract encoded puzzle from `/b/<state>` ——— */
