--- a/index.html
+++ b/index.html
@@ -20,25 +20,45 @@
     body {
       margin: 0;
       padding: 0;
-      font-family: 'Helvetica Neue', sans-serif;
+      min-height: 100vh;
       background: #0a0a0a;
       color: #f4f4f4;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-    }
-    header, main, footer {
+      font-family: 'Helvetica Neue', sans-serif;
       display: flex;
       flex-direction: column;
       align-items: center;
+      justify-content: center;
       text-align: center;
     }
+    .container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 20px;
+    }
     header {
-      margin-top: 40px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
     main {
-      flex-grow: 1;
-      justify-content: center;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    footer {
+      font-size: 0.8rem;
+      opacity: 0.6;
+      display: flex;
+      gap: 10px;
+      margin-top: 20px;
+    }
+    footer a {
+      color: #f4f4f4;
+      text-decoration: none;
+    }
+    footer a:hover {
+      text-decoration: underline;
     }
     h1 {
       font-size: 2rem;
@@ -49,25 +69,6 @@
       font-size: 1rem;
       margin-top: 5px;
       opacity: .8;
-    }
-    a#fallback-link {
-      display: none;
-      margin-top: 20px;
-      padding: 10px 20px;
-      background: #00ffe1;
-      color: #0a0a0a;
-      text-decoration: none;
-      border-radius: 6px;
-      font-weight: bold;
-      transition: background .2s ease, opacity .5s ease;
-      opacity: 0;
-    }
-    a#fallback-link.show {
-      display: inline-block;
-      opacity: 1;
-    }
-    a#fallback-link:hover {
-      background: #00cbbd;
     }
     .grid-icon {
       width: 80px;
@@ -96,44 +97,52 @@
       width: 160px;
       margin-top: 30px;
     }
-    footer {
-      margin-bottom: 20px;
-      font-size: 0.8rem;
-      opacity: 0.6;
-    }
-    footer a {
-      color: #f4f4f4;
+    a#fallback-link {
+      display: none;
+      margin-top: 20px;
+      padding: 10px 20px;
+      background: #00ffe1;
+      color: #0a0a0a;
       text-decoration: none;
-      margin: 0 10px;
+      border-radius: 6px;
+      font-weight: bold;
+      transition: background .2s ease, opacity .5s ease;
+      opacity: 0;
     }
-    footer a:hover {
-      text-decoration: underline;
+    a#fallback-link.show {
+      display: inline-block;
+      opacity: 1;
+    }
+    a#fallback-link:hover {
+      background: #00cbbd;
     }
   </style>
 </head>
 <body>
 
-  <header>
-    <img src="/favicon.png" alt="GridFill icon" class="grid-icon" />
-  </header>
+  <div class="container">
+    <header>
+      <img src="/favicon.png" alt="GridFill icon" class="grid-icon" />
+    </header>
 
-  <main>
-    <h1 id="main-title">Launching GridFill...</h1>
-    <p id="status-text">Loading your puzzle — launching the app…</p>
-    <div id="loading-dots" class="loading-animation">
-      <div class="dot"></div><div class="dot"></div><div class="dot"></div>
-    </div>
-    <a id="fallback-link" href="#">Tap here if nothing happens</a>
+    <main>
+      <h1 id="main-title">Launching GridFill...</h1>
+      <p id="status-text">Loading your puzzle — launching the app…</p>
+      <div id="loading-dots" class="loading-animation">
+        <div class="dot"></div><div class="dot"></div><div class="dot"></div>
+      </div>
+      <a id="fallback-link" href="#">Tap here if nothing happens</a>
 
-    <!-- App Store badge — hidden unless needed -->
-    <a id="app-store-link" href="https://apps.apple.com/" target="_blank" style="display:none;">
-      <img src="apple_store.svg" alt="Download on the App Store" class="app-store-badge" />
-    </a>
-  </main>
+      <!-- App Store badge — hidden unless needed -->
+      <a id="app-store-link" href="https://apps.apple.com/" target="_blank" style="display:none;">
+        <img src="apple_store.svg" alt="Download on the App Store" class="app-store-badge" />
+      </a>
+    </main>
 
-  <footer>
-    <a href="/policy">Privacy Policy</a> | <a href="/support">Support</a>
-  </footer>
+    <footer>
+      <a href="/policy">Privacy Policy</a> | <a href="/support">Support</a>
+    </footer>
+  </div>
 
   <script>
     const appStoreURL = "https://apps.apple.com/";  // <-- real App Store link
