--- a/index.html
+++ b/index.html
@@ -120,6 +120,16 @@
 </head>
 <body>
 
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6FM4J9KVJ4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-6FM4J9KVJ4');
+</script>
+
   <div class="container">
     <header>
       <img src="/favicon.png" alt="GridFill icon" class="grid-icon" />
