--- a/policy.html
+++ b/policy.html
@@ -38,6 +38,17 @@
     </style>
 </head>
 <body>
+
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6FM4J9KVJ4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-6FM4J9KVJ4');
+</script>
+    
     <div class="container">
         <h1>Privacy Policy for GridFill</h1>
         <p><strong>Effective Date:</strong> April 28, 2025</p>
