--- a/support.html
+++ b/support.html
@@ -38,6 +38,17 @@
     </style>
 </head>
 <body>
+
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6FM4J9KVJ4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-6FM4J9KVJ4');
+</script>
+    
     <div class="container">
         <h1>Support for GridFill</h1>
         <p>If you have any questions, feedback, or need help with GridFill, feel free to contact us.</p>
