add description to index.html

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <title>GridFill: Endless Puzzle</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="GridFill is an addictive logic puzzle game. Solve spatial challenges by rotating and placing puzzle pieces perfectly. Try to beat your best time!">
   <meta name="google-site-verification" content="TDGnBI31_ul1VX82onM9naqZInznIB2mzZVILSWZRHY" />
   <link rel="icon" type="image/png" href="/favicon.png">
   <link rel="apple-touch-icon" href="/favicon.png">
@@ -15,7 +17,7 @@
   <meta name="twitter:description" content="Try to solve this puzzle faster than your friends.">
   <meta name="twitter:image" content="https://gridfill.link/preview.png">
   <meta name="twitter:card" content="summary_large_image" />
-  <title>GridFill: Endless Puzzle</title>
+  <link rel="canonical" href="https://gridfill.link/">
   <style>
     body {
       margin: 0;
