--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
       <a href="/policy">Privacy Policy</a> | 
       <a href="/support">Support</a> | 
       <a href="https://instagram.com/gridfillgame" target="_blank" aria-label="Instagram">
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#f4f4f4" viewBox="0 0 24 24">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#f4f4f4" viewBox="0 0 24 24" aria-hidden="true">
           <path d="M12 2.2c3.2 0 3.6 0 4.9.1 1.2.1 1.9.3 2.3.5.5.2.8.4 1.2.8s.6.7.8 1.2c.2.4.4 1 .5 2.3.1 1.3.1 1.7.1 4.9s0 3.6-.1 4.9c-.1 1.2-.3 1.9-.5 2.3-.2.5-.4.8-.8 1.2s-.7.6-1.2.8c-.4.2-1 .4-2.3.5-1.3.1-1.7.1-4.9.1s-3.6 0-4.9-.1c-1.2-.1-1.9-.3-2.3-.5a3.6 3.6 0 0 1-1.2-.8 3.6 3.6 0 0 1-.8-1.2c-.2-.4-.4-1-.5-2.3-.1-1.3-.1-1.7-.1-4.9s0-3.6.1-4.9c.1-1.2.3-1.9.5-2.3.2-.5.4-.8.8-1.2.4-.4.7-.6 1.2-.8.4-.2 1-.4 2.3-.5 1.3-.1 1.7-.1 4.9-.1zm0-2.2c-3.3 0-3.7 0-5 .1-1.4.1-2.3.3-3.2.7a5.8 5.8 0 0 0-2.1 1.4A5.8 5.8 0 0 0 .4 5.9c-.4.9-.6 1.8-.7 3.2C-.5 10.4-.5 10.8-.5 14s0 3.6.1 5c.1 1.4.3 2.3.7 3.2a5.8 5.8 0 0 0 1.4 2.1 5.8 5.8 0 0 0 2.1 1.4c.9.4 1.8.6 3.2.7 1.3.1 1.7.1 5 .1s3.7 0 5-.1c1.4-.1 2.3-.3 3.2-.7a5.8 5.8 0 0 0 2.1-1.4 5.8 5.8 0 0 0 1.4-2.1c.4-.9.6-1.8.7-3.2.1-1.3.1-1.7.1-5s0-3.7-.1-5c-.1-1.4-.3-2.3-.7-3.2a5.8 5.8 0 0 0-1.4-2.1 5.8 5.8 0 0 0-2.1-1.4c-.9-.4-1.8-.6-3.2-.7-1.3-.1-1.7-.1-5-.1zM12 5.8A6.2 6.2 0 1 0 18.2 12 6.2 6.2 0 0 0 12 5.8zm0 10.2a4 4 0 1 1 4-4 4 4 0 0 1-4 4zm6.4-11.4a1.4 1.4 0 1 1-1.4-1.4 1.4 1.4 0 0 1 1.4 1.4z"/>
         </svg>
       </a>
