--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
       <!-- App Store badge — hidden unless needed -->
       <a id="app-store-link" href="https://apps.apple.com/" target="_blank" style="display:none;">
-        <img src="apple_store.svg" alt="Download on the App Store" class="app-store-badge" />
+        <img src="apple_store.svg" alt="Download on the App Store" class="app-store-badge" width="160" height="54"/>
       </a>
     </main>
 
