--- a/index.html
+++ b/index.html
@@ -144,10 +144,10 @@
       <div id="loading-dots" class="loading-animation">
         <div class="dot"></div><div class="dot"></div><div class="dot"></div>
       </div>
-      <a id="fallback-link" href="https://apps.apple.com/id6745104855">Tap here if nothing happens</a>
+      <a id="fallback-link" href="https://apps.apple.com/app/id6745104855">Tap here if nothing happens</a>
 
       <!-- App Store badge — hidden unless needed -->
-      <a id="app-store-link" href="https://apps.apple.com/id6745104855" target="_blank" style="display:none;">
+      <a id="app-store-link" href="https://apps.apple.com/app/id6745104855" target="_blank" style="display:none;">
         <img src="apple_store.svg" alt="Download on the App Store" class="app-store-badge" width="160" height="54"/>
       </a>
     </main>
@@ -164,7 +164,7 @@
   </div>
 
   <script>
-    const appStoreURL = "https://apps.apple.com/id6745104855";  // <-- real App Store link
+    const appStoreURL = "https://apps.apple.com/app/id6745104855";  // <-- real App Store link
     const deepScheme = "gridfill://b/";
 
     const mainTitle = document.getElementById("main-title");
