--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <meta name="twitter:description" content="Try to solve this puzzle faster than your friends.">
   <meta name="twitter:image" content="https://gridfill.link/preview.png">
   <meta name="twitter:card" content="summary_large_image" />
-  <link rel="canonical" href="https://gridfill.link">
+  <link rel="canonical" href="https://gridfill.link/">
   <link rel="me" href="https://instagram.com/gridfillgame" />
   <style>
     body {
